[Minor] Replace deprecated Class<T>.newInstance in Pluginloader